highlight warnings a little too.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39112 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.css
+++ b/magnolia-core/src/main/resources/info/magnolia/module/ui/ModuleManagerWebUI.css
@@ -164,7 +164,7 @@ h3 {
     margin: 0 0 5px 0;
     padding-left: 0;
     font-size: 9pt;
-	white-space: pre-wrap;
+    white-space: pre-wrap;
 }
 
 .condition {
@@ -174,6 +174,10 @@ h3 {
 .taskDescription, .conditionDescription {
     color: #666;
     margin-left: 0.5em;
+}
+
+.messages .warning {
+    color: #990000;
 }
 
 .messages .error {
