MAGNOLIA-3387: improved installation instructions and welcome message.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39256 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/quickstart.css
@@ -15,12 +15,26 @@ a {
     color: #669900;
 }
 
+a img {
+	margin: 0 0 -2px 0;
+	padding: 0;
+	border: 0;
+}
+
 h2 {
     padding: 0;
     margin: 0;
     font-weight: normal;
     color: #669900;
     font-size: 14pt;
+}
+
+h3 {
+    padding: 0;
+    margin: 40px 0 0 0;
+    font-weight: normal;
+    color: #669900;
+    font-size: 12pt;
 }
 
 li {
