MAGNOLIA-3546 dialogs now use the JCR api directly and have vertical tabs to the right
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42150 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-module-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -3,3 +3,35 @@
 .v-table-body {
 	overflow-y: scroll !important;
 }
+
+.m-vtabsheet-canvas {
+	background-color: #dddddd;
+}
+
+.v-panel-nocaption-vtabsheet-selectedtab {
+	display:none;
+}
+.v-panel-captionwrap-vtabsheet-selectedtab {
+	display:none;
+}
+.v-panel-content-vtabsheet-selectedtab {
+	background-color: #dddddd;
+	border:0;
+}
+.v-panel-deco-vtabsheet-selectedtab {
+	display:none;
+}
+
+.v-panel-nocaption-vtabsheet-tab {
+	display:none;
+}
+.v-panel-captionwrap-vtabsheet-tab {
+	display:none;
+}
+.v-panel-content-vtabsheet-tab {
+	background-color: white;
+	border:0;
+}
+.v-panel-deco-vtabsheet-tab {
+	display:none;
+}
