the table is not able to handle this, it doesn't calculate the width correctly
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42159 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-module-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -1,8 +1,9 @@
 @import "../runo/styles.css";
 
-.v-table-body {
+/*.v-table-body {
 	overflow-y: scroll !important;
 }
+*/
 
 .m-vtabsheet-canvas {
 	background-color: #dddddd;
