--- a/magnolia-module-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-module-vaadin/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -5,6 +5,10 @@
 }
 */
 
+.v-table-row,.v-table-row-odd {
+    height: 30px; /* a fix for TreeTable row jittering */
+}
+
 .m-vtabsheet-canvas {
 	background-color: #dddddd;
 }
