MAGNOLIA-3546: rounded corners search box
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43380 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -40,6 +40,10 @@
 .v-panel-deco-vtabsheet-tab {
 	display:none;
 }
-.workbench-header {
+.m-workbench-header {
 	border-top: 1px solid #B6BBBC;
+}
+.m-search-box {
+	-moz-border-radius: 15px;
+	border-radius: 15px;
 }
