Ugly hack to not wrap the label
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43393 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -47,3 +47,14 @@
 	-moz-border-radius: 15px;
 	border-radius: 15px;
 }
+
+.v-treetable-treespacer{
+	float: left;
+	margin-top: 2px;
+}
+
+.v-table-cell-wrapper img{
+    float: left;
+    margin-top: 2px;
+    margin-right: 5px;
+}
