--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -46,6 +46,7 @@
 .m-search-box {
 	-moz-border-radius: 15px;
 	border-radius: 15px;
+	padding-left: 10px !important;
 }
 
 .v-treetable-treespacer{
