--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -42,6 +42,7 @@
 }
 .m-workbench-header {
 	border-top: 1px solid #B6BBBC;
+	border-left: 1px solid #B6BBBC;
 }
 .m-search-box {
 	-moz-border-radius: 15px;
@@ -58,4 +59,9 @@
     float: left;
     margin-top: 2px;
     margin-right: 5px;
+}
+
+.m-embedded-view {
+	border-top: 1px solid #B6BBBC;
+	border-left: 1px solid #B6BBBC;
 }
