A hack to show the label, which is a div, inline with the preceding icons. It probably breaks on IE as it uses display: inline-block.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43580 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -65,3 +65,10 @@
 	border-top: 1px solid #B6BBBC;
 	border-left: 1px solid #B6BBBC;
 }
+/**
+* FIXME this is a hack to show the label which is a div inline with the preceding icons. It probably breaks on IE as it uses inline-block.
+*/
+
+.m-inline-div {
+	display: inline-block;
+}
