MAGNOLIA-3546: added magnifier icon to search box
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43744 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -47,7 +47,9 @@
 .m-search-box {
 	-moz-border-radius: 15px;
 	border-radius: 15px;
-	padding-left: 10px !important;
+	padding-left: 20px !important;
+	padding-top: 6px !important;
+	background: #FFF url("img/magnifier.png") no-repeat 2px 5px;
 }
 
 .v-treetable-treespacer{
