--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -50,8 +50,12 @@
 	padding-left: 20px !important;
 	padding-top: 4px !important;
 	background: #FFF url("img/magnifier.png") no-repeat 2px 5px;
+	color: #B6BBBC !important;
 }
 
+.m-search-box:focus {
+	color: #000 !important;
+}
 .v-treetable-treespacer{
 	float: left;
 	margin-top: 2px;
