MAGNOLIA-3614: even closer to the mockup
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44257 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -60,6 +60,9 @@
 .m-search-box:focus {
 	color: #3B4B57 !important;
 }
+.m-search-form-label {
+	font-weight: bold;
+}
 .v-treetable-treespacer{
 	float: left;
 	margin-top: 2px;
