--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -9,6 +9,14 @@
     height: 30px; /* a fix for TreeTable row jittering */
 }
 
+.v-table-focus .v-table-cell-content {
+	border: none;
+}
+
+.v-table-body focused {
+	border: none;
+}
+
 .m-vtabsheet-canvas {
 	background-color: #dddddd;
 }
