remove scrollbars added by lazy load wrapper
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@44470 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -92,3 +92,7 @@
 .m-inline-div {
 	display: inline-block;
 }
+
+.v-splitpanel-second-container {
+	overflow: hidden !important; /* remove scrollbars added by lazy load wrapper*/
+}
