--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -1,58 +1,167 @@
-@import url('../runo/styles.css');
+@import "../chameleon/styles.css";
 
-/* .v-table-body { */
-/* 	overflow-y: scroll !important; */
-/* } */
+/* Application background */
+.v-app {
+  background: rgb(252, 255, 246);
+}
+
+.v-window,.v-popupview-popup,.v-filterselect-suggestpopup,.v-datefield-popup,.v-contextmenu,.v-Notification,.v-menubar-submenu {
+  background-color: rgb(252, 255, 246);
+  background-color: rgba(252, 255, 246, .85);
+}
+
+body.v-ie6 .v-window,body.v-ie7 .v-window,body.v-ie6 .v-popupview-popup,body.v-ie7 .v-popupview-popup,body.v-ie6 .v-filterselect-suggestpopup,
+body.v-ie7 .v-filterselect-suggestpopup,body.v-ie6 .v-datefield-popup,body.v-ie7 .v-datefield-popup,body.v-ie6 .v-contextmenu,
+body.v-ie7 .v-contextmenu,body.v-ie6 .v-menubar-submenu,body.v-ie7 .v-menubar-submenu,.v-panel-content,.v-panel-bubble .v-panel-captionwrap,
+.v-panel-bubble .v-panel-deco-bubble,.v-tabsheet-content,.v-tabsheet-tabitem-selected,.v-slider-base,.v-window-modalitycurtain,.v-window-opaque,
+.v-progressindicator-wrapper,.v-accordion-item-caption,.v-accordion-item-open .v-accordion-item-caption:active,
+.v-accordion-opaque div.v-accordion-item-open,.v-table-scrollposition,.v-table-body
+{
+  background-color: rgb(252, 255, 246);
+}
+
+/* Base font size and color */
+.v-app,.v-window,.v-popupview-popup,.v-app input,.v-app button,.v-app textarea,.v-window input,.v-window button,.v-window textarea,
+.v-popupview-popup input,.v-popupview-popup button,.v-popupview-popup textarea,.v-filterselect-suggestpopup,.v-datefield-popup,
+.v-datefield-calendarpanel-header button,.v-contextmenu,.v-Notification,.v-menubar-submenu,.v-table-header-drag,
+.v-filterselect-select-button .v-filterselect-input,.v-drag-element
+{
+  font-size: 13px;
+  color: rgb(49, 51, 46);
+}
+
+.v-app select,.v-window select,.v-popupview-popup select,.v-datefield-popup select {
+  font-size: 13px;
+}
+
+.v-label,.sidebar-menu .v-label,.v-table-scrollposition {
+}
+
+/* Base background color */
+.v-button:active,.v-ie .v-button.v-pressed,div.v-button-down,.v-slider .v-slider-handle-active {
+  background-color: rgb(169, 174, 161);
+  border-color: rgb(108, 111, 103);
+}
+
+div.v-button-down:active {
+  background-color: rgb(135, 139, 129);
+}
+
+.v-button:focus {
+  background-color: rgb(169, 174, 161);
+}
+
+/* Base border color */
+.v-button:active .v-button-wrap,.v-ie .v-button.v-pressed .v-button-wrap,.v-button-down .v-button-wrap,.v-datefield-calendarpanel-header td,
+.v-slider-base,.v-tabsheet-scrollerNext,.v-tabsheet-scrollerNext-disabled,.v-tabsheet-scrollerNext-disabled:active,.v-table-header-wrap,
+.v-table-body,.v-table-resizer,div.v-table-focus-slot-left,div.v-table-focus-slot-right,input.v-textfield,textarea.v-textarea,.v-filterselect
+{
+  border-color: rgb(135, 139, 129);
+}
+
+input.v-textfield,textarea.v-textarea,.v-filterselect {
+  border-bottom-color: rgb(169, 174, 161);
+  border-left-color: rgb(169, 174, 161);
+  border-right-color: rgb(169, 174, 161);
+}
+
+.v-button,.v-disabled.v-button:focus,.v-disabled.v-button:active,.v-datefield-button,.v-datefield-calendarpanel-header button,
+td.v-datefield-calendarpanel-month,.v-datefield-calendarpanel-weekdays strong,.v-slider-handle,.v-table-header-wrap,.v-table-header-drag,
+.v-filterselect-prevpage-off,.v-filterselect-nextpage-off,.v-filterselect-prevpage,.v-filterselect-nextpage,.v-filterselect-select-button,
+.v-splitpanel-hsplitter,.v-splitpanel-vsplitter,.v-splitpanel-hsplitter-locked,.v-splitpanel-vsplitter-locked,.v-accordion-opaque,
+.v-accordion-opaque .v-accordion-item-open,.v-accordion-opaque .v-accordion-item-caption,
+.v-accordion-opaque .v-accordion-item-open .v-accordion-item-caption:active,.v-tabsheet-scroller,.v-csslayout-toolbar,.v-menubar
+{
+  background-color: rgb(211, 217, 201);
+  border-color: rgb(135, 139, 129);
+}
+
+.v-button .v-button-wrap,.v-disabled.v-button:focus .v-button-wrap,.v-disabled.v-button:active .v-button-wrap,
+.v-datefield-calendarpanel-header button,td.v-datefield-calendarpanel-month,.v-window-wrap,.v-popupview-popup,.v-filterselect-suggestpopup,
+.v-datefield-popup,.v-contextmenu,.v-menubar-submenu,.v-panel-bubble .v-panel-caption-bubble,.v-slider-handle,
+.v-tabsheet-tabitem-selected .v-caption,.v-table-header-wrap,.v-table-header-drag,.v-filterselect-prevpage-off,.v-filterselect-nextpage-off,
+.v-filterselect-prevpage,.v-filterselect-nextpage,.v-filterselect-select-button,.v-progressindicator-indicator,.v-accordion-item-caption,
+.v-accordion-item-open .v-accordion-item-caption:active,.v-tabsheet-scroller,.v-csslayout-toolbar,.v-menubar
+{
+}
+
+.v-datefield-calendarpanel-weekdays strong,.v-splitpanel-hsplitter-small,.v-splitpanel-vsplitter-small,.v-splitpanel-hsplitter-small-locked,
+.v-splitpanel-vsplitter-small-locked
+{
+  background-color: rgb(169, 174, 161);
+}
+
+.v-progressindicator-wrapper {
+  border-color: rgb(169, 174, 161);
+}
+
+.v-button,.v-disabled.v-button:focus,.v-disabled.v-button:active,.v-datefield-calendarpanel-header button,td.v-datefield-calendarpanel-month,
+.v-tabsheet-tabitem-selected .v-caption,.v-window-header,.v-table-caption-container,.v-accordion-item-caption,.v-menubar .v-menubar-menuitem,
+.v-filterselect-select-button .v-filterselect-input
+{
+  text-shadow: 0 1px 0 rgb(230, 232, 227);
+}
+
+/* Background border color */
+.v-window,.v-popupview-popup,.v-filterselect-suggestpopup,.v-datefield-popup,.v-contextmenu,.v-Notification,.v-menubar-submenu,.v-panel-caption,
+.v-panel-nocaption,.v-panel-content,.v-panel-deco,.v-panel-light .v-panel-caption-light,.v-panel-bubble .v-panel-captionwrap,
+.v-panel-bubble .v-panel-content-bubble,.v-panel-bubble .v-panel-deco-bubble,.v-tabsheet-tabitem-selected,.v-tabsheet-tabitem,
+.v-tabsheet-spacertd div,.v-tabsheet-content,.v-tabsheet-deco,.v-slider,.v-splitpanel-hsplitter,.v-splitpanel-vsplitter,
+.v-splitpanel-hsplitter-locked,.v-splitpanel-vsplitter-locked,.v-table-scrollposition,.v-accordion,.v-accordion-item-caption,.v-accordion-item-open,
+.v-menubar-separator span
+{
+  border-color: rgb(202, 204, 197);
+}
+
+/* Alternate colors */
+.v-label-color,.v-button-link,.v-button-link:focus,.v-button-link:active,.v-disabled.v-button-link,.v-disabled.v-button-link:focus,.v-app a,
+.v-popupview-popup a,.v-popupview,.sidebar-menu .v-label
+{
+  color: rgb(96, 179, 14);
+}
+
+.v-button-default,.v-disabled.v-button-default,.v-disabled.v-button-default:focus,.v-button-default:active,.v-ie7 .v-button-default.v-pressed,
+.v-ie8 .v-button-default.v-pressed,.sidebar-menu .tab-selected,.sidebar-menu .selected,.v-horizontallayout-segment-alternate .v-button-down
+{
+  border-color: rgb(71, 114, 29);
+}
+
+.v-button-default:focus,.v-horizontallayout-segment-alternate .v-button-down:active {
+  background-color: rgb(83, 143, 24);
+}
+
+.v-button-default:active .v-button-wrap,.v-ie7 .v-button-default.v-pressed .v-button-wrap,.v-ie8 .v-button-default.v-pressed .v-button-wrap,
+.v-progressindicator-indicator,.v-datefield-calendarpanel-day:hover,.v-horizontallayout-segment-alternate .v-button-down .v-button-wrap
+{
+  border-color: rgb(83, 143, 24);
+}
+
+.v-button-default,.v-disabled.v-button-default,.v-disabled.v-button-default:focus,.v-button-default:active,.v-ie7 .v-button-default.v-pressed,
+.v-ie8 .v-button-default.v-pressed,.v-panel-bubble .v-panel-caption,.v-datefield-calendarpanel-day-selected,.v-table tr.v-selected,
+.v-contextmenu .gwt-MenuItem-selected,.v-contextmenu .gwt-MenuItem-selected div,.v-filterselect-suggestpopup .gwt-MenuItem-selected,
+.v-progressindicator-indicator,.v-tree-node-selected span,.sidebar-menu .tab-selected,.sidebar-menu .selected,
+.v-horizontallayout-segment-alternate .v-button-down,.v-menubar .v-menubar-menuitem-selected,.v-menubar-submenu .v-menubar-menuitem-selected
+{
+  background-color: rgb(96, 179, 14);
+  color: rgb(244, 245, 243);
+  text-shadow: 0 -1px 0 rgb(71, 114, 29);
+}
+
+.v-ie6 .v-progressindicator-indicator {
+  background-color: rgb(96, 179, 14);
+}
+
+.v-panel-caption,.v-table-striped .v-table-row-odd,.sidebar-menu {
+  background: rgb(218, 227, 208);
+}
+
+.sidebar-menu .tab-selected,.sidebar-menu .selected {
+  text-shadow: 0 1px 0 rgb(71, 114, 29);
+}
 
 .v-table-cell-wrapper {
   overflow-x: hidden;
 }
-
-/* .v-table-focus .v-table-cell-content { */
-/*   border: none; */
-/* } */
-
-/* .v-table-body focused { */
-/*   border: none; */
-/* } */
-
-/* .m-vtabsheet-canvas { */
-/*   background-color: #dddddd; */
-/* } */
-
-/* .v-panel-nocaption-vtabsheet-selectedtab { */
-/*   display: none; */
-/* } */
-
-/* .v-panel-captionwrap-vtabsheet-selectedtab { */
-/*   display: none; */
-/* } */
-
-/* .v-panel-content-vtabsheet-selectedtab { */
-/*   background-color: #dddddd; */
-/*   border: 0; */
-/* } */
-
-/* .v-panel-deco-vtabsheet-selectedtab { */
-/*   display: none; */
-/* } */
-
-/* .v-panel-nocaption-vtabsheet-tab { */
-/*   display: none; */
-/* } */
-
-/* .v-panel-captionwrap-vtabsheet-tab { */
-/*   display: none; */
-/* } */
-
-/* .v-panel-content-vtabsheet-tab { */
-/*   background-color: white; */
-/*   border: 0; */
-/* } */
-
-/* .v-panel-deco-vtabsheet-tab { */
-/*   display: none; */
-/* } */
 
 .m-workbench-header {
   border-top: 1px solid #B6BBBC;
@@ -81,22 +190,6 @@
 .m-search-form-label {
   font-weight: bold;
 }
-
-/* a fix for TreeTable row jittering */
-/* .v-table-row,.v-table-row-odd { */
-/*     height: 30px; */
-/* } */
-
-/* .v-treetable-treespacer{ */
-/* 	float: left; */
-/* 	margin-top: 2px; */
-/* } */
-
-/* .v-table-cell-wrapper img{ */
-/*     float: left; */
-/*     margin-top: 2px; */
-/*     margin-right: 5px; */
-/* } */
 
 .m-embedded-view {
   border-top: 1px solid #B6BBBC;
