--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -134,6 +134,22 @@ input.v-textfield,textarea.v-textarea,.v-filterselect {
   overflow-x: hidden;
 }
 
+.sidebar-menu .v-label {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+.sidebar-menu .v-label:hover {
+  cursor: pointer;
+}
+
+.sidebar-menu .v-label img {
+  vertical-align: middle;
+}
+
 .m-workbench-header {
 
 }
