[SCRUM-72][SCRUM-169] admin central navigation: another custom accordion attempt
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@46269 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -150,6 +150,10 @@ input.v-textfield,textarea.v-textarea,.v-filterselect {
   vertical-align: middle;
 }
 
+.sidebar-menu .v-tree-node {
+  background: none;
+}
+
 .m-workbench-header {
 
 }
