[SCRUM-72] admin central navigation: CSS fix
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@46346 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -146,6 +146,10 @@ input.v-textfield,textarea.v-textarea,.v-filterselect {
   cursor: pointer;
 }
 
+.sidebar-menu .v-label-spacer:hover {
+  cursor: auto;
+}
+
 .sidebar-menu .v-label img {
   vertical-align: middle;
 }
