[SCRUM-72][SCRUM-162] admin central navigation: random notification badges
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@46370 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -158,6 +158,10 @@ input.v-textfield,textarea.v-textarea,.v-filterselect {
   background: none;
 }
 
+.sidebar-menu .v-caption {
+  float: right;
+}
+
 .m-workbench-header {
 
 }
