[SCRUM-72][SCRUM-169] closing of accordion items is now animated
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@46414 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
+++ b/magnolia-ui-vaadin-integration/src/main/resources/mgnl-resources/VAADIN/themes/magnolia/styles.css
@@ -160,6 +160,7 @@ input.v-textfield,textarea.v-textarea,.v-filterselect {
 
 .sidebar-menu .v-caption {
   float: right;
+  padding-top: 2ex;
 }
 
 .m-workbench-header {
